--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   <title>HTML Images</title>
 </head>
 <body>
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
 
+">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+" alt="lion_photo">
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+
+" alt="lion_photo" title="here is a lion photo">
   <!-- Your code here -->
 
 </body>
