--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"  >
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"  alt="This is a loin image"  >
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"  alt="This is a loin image" title="Lions" >
   <!-- Your code here -->
 
 </body>
