--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
 
   <!-- Your code here -->
-
+<h3>Lion Image one</h3>
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+<h3>Lion Image two</h3>
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion Image">
+<h3>Lion Image three</h3>
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion Image" title="Lion Image">
 </body>
 </html>
