--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <figure>
+    <img src="https://i.imgur.com/H1qsYEl.png">
     <img src="../images/my_company_logo.png" alt="my company name"  title="We're here to help you!">
   </figure>
 
