Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <figure>
     <img src="https://i.imgur.com/H1qsYEl.png">
+    <img alt='img desc'>
     <img src="../images/my_company_logo.png" alt="my company name"  title="We're here to help you!">
   </figure>
 
