--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="./1.jpg">
+  <img src="./1.jpg" alt="photo">
+  <img src="./1.jpg" alt="photo" title="photo">
 </body>
 </html>
