--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
 
   <!-- Your code here -->
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion picure">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion picure" title="This is a Lion">
 </body>
 </html>
